--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,9 +14,9 @@ dependencies:
 
 dev_dependencies: 
   mockito: ^5.0.10
-  pedantic: 1.11.0
   flutter_test: 
     sdk: flutter
+  build_runner: ^2.0.4
 
 flutter: 
   uses-material-design: true
